crates/sourcepawn-studio/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__global_variable_3.snap
---
source: crates/sourcepawn-studio/tests/text_document/goto_definition/mod.rs
assertion_line: 29
expression: "goto_definition(r#\"\n%! main.sp\nint foo, bar = 1;\n          |\n          ^\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 12
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 16
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 12
      }
    }
  }
]
